src/test/ui/single-use-lifetime/zero-uses-in-fn.stderr
error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-fn.rs:17:6
   |
LL | fn d<'a>() { } //~ ERROR `'a` never used
   |      ^^
   |
note: lint level defined here
  --> $DIR/zero-uses-in-fn.rs:13:9
   |
LL | #![deny(unused_lifetimes)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

